[gd_scene load_steps=10 format=3 uid="uid://c65cgqprr57y3"]

[ext_resource type="Script" path="res://ui/Interface.gd" id="1_b72om"]
[ext_resource type="PackedScene" uid="uid://eg331gs8vn57" path="res://ui/item_bar/item_bar.tscn" id="2_cpqqp"]
[ext_resource type="PackedScene" uid="uid://by7hj3l3vvi1t" path="res://ui/health_bar/health_bar.tscn" id="3_gah7r"]
[ext_resource type="PackedScene" uid="uid://qelsp1vqa35w" path="res://ui/experience_bar/experience_bar.tscn" id="4_h0jsh"]
[ext_resource type="PackedScene" uid="uid://dn0lo5o7t8lq4" path="res://testing/PerformanceStats.tscn" id="5_n7g76"]
[ext_resource type="PackedScene" uid="uid://bo1dtknm0qdq5" path="res://ui/dialog/balloon.tscn" id="6_f1sb0"]
[ext_resource type="Shader" path="res://effects/shaders/edge.gdshader" id="7_uvcin"]
[ext_resource type="Texture2D" uid="uid://d2jgbswgewc53" path="res://assets/infobook.png" id="7_vruir"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2oqun"]
shader = ExtResource("7_uvcin")
shader_parameter/active = false
shader_parameter/edge_color = Color(0.164706, 0, 0.270588, 1)

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_b72om")

[node name="ItemBar" parent="." instance=ExtResource("2_cpqqp")]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -600.0
offset_top = 19.0
offset_right = 600.0
offset_bottom = 83.0
grow_horizontal = 2

[node name="BottomBar" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -328.0
offset_right = 140.0
offset_bottom = 328.0
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="BottomBar"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StatBox" type="HBoxContainer" parent="BottomBar/VBox"]
layout_mode = 2

[node name="HealthBar" parent="BottomBar/VBox/StatBox" instance=ExtResource("3_gah7r")]
layout_mode = 2

[node name="ExperienceBar" parent="BottomBar/VBox/StatBox" instance=ExtResource("4_h0jsh")]
layout_mode = 2

[node name="PerformanceStats" parent="." instance=ExtResource("5_n7g76")]
layout_mode = 0
offset_left = 897.0
offset_top = 13.0
offset_right = 937.0
offset_bottom = 196.0

[node name="DialogBalloon" parent="." instance=ExtResource("6_f1sb0")]
custom_minimum_size = Vector2(500, 136)
layout_mode = 2
offset_left = 642.0
offset_top = 500.0
offset_right = 1142.0
offset_bottom = 636.0

[node name="InfoButton" type="TextureButton" parent="."]
material = SubResource("ShaderMaterial_2oqun")
layout_mode = 0
offset_left = 128.0
offset_top = 16.0
offset_right = 155.0
offset_bottom = 50.0
texture_normal = ExtResource("7_vruir")

[connection signal="mouse_entered" from="InfoButton" to="." method="_on_info_button_mouse_entered"]
[connection signal="mouse_exited" from="InfoButton" to="." method="_on_info_button_mouse_exited"]
